crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__force_to_top.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
force_to_top.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
   |
 1 | / import lib6
 2 | | import lib2
 3 | | import lib5
 4 | | import lib1
 5 | | import lib3
 6 | | import lib4
 7 | |
 8 | | import foo
 9 | | import z
10 | | from foo import bar
11 | | from lib1 import foo
12 | | from lib2 import foo
13 | | from lib1.lib2 import foo
14 | | from foo.lib1.bar import baz
15 | | from lib4 import lib1
16 | | from lib5 import lib2
17 | | from lib4 import lib2
18 | | from lib5 import lib1
19 | |
20 | | import lib3.lib4
21 | | import lib3.lib4.lib5
22 | | from lib3.lib4 import foo
23 | | from lib3.lib4.lib5 import foo
   | |______________________________^ I001 (unsorted-imports)
   |
   = help: Organize imports

ℹ Safe fix
1     |-import lib6
   1  |+import foo
   2  |+import lib1
2  3  | import lib2
3     |-import lib5
4     |-import lib1
5  4  | import lib3
   5  |+import lib3.lib4
   6  |+import lib3.lib4.lib5
6  7  | import lib4
7     |-
8     |-import foo
   8  |+import lib5
   9  |+import lib6
9  10 | import z
10 11 | from foo import bar
   12 |+from foo.lib1.bar import baz
11 13 | from lib1 import foo
12    |-from lib2 import foo
13 14 | from lib1.lib2 import foo
14    |-from foo.lib1.bar import baz
15    |-from lib4 import lib1
16    |-from lib5 import lib2
17    |-from lib4 import lib2
18    |-from lib5 import lib1
19    |-
20    |-import lib3.lib4
21    |-import lib3.lib4.lib5
   15 |+from lib2 import foo
22 16 | from lib3.lib4 import foo
23 17 | from lib3.lib4.lib5 import foo
   18 |+from lib4 import lib1, lib2
   19 |+from lib5 import lib1, lib2
