crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__force_wrap_aliases.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
force_wrap_aliases.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from .a import a1 as a1, a2 as a2
2 | | from .b import b1 as b1
3 | | from .c import c1
  | |_________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1   |-from .a import a1 as a1, a2 as a2
  1 |+from .a import a1 as a1
  2 |+from .a import a2 as a2
2 3 | from .b import b1 as b1
3 4 | from .c import c1
